# Co-Sight

./: .dockerignore  .env_template  .gitignore  CLAUDE.md  Co-Sight架构说明文档.md  CoSight.py  Dockerfile  MANIFEST.in  README-zh.md  README.md  __init__.py  llm.py  pyproject.toml  requirements.txt  setup.py
app/common/: logger_util.py
app/cosight/: requirements.txt
app/cosight/llm/: chat_llm.py
app/cosight/record/: core.csv
app/cosight/task/: plan_report_manager.py  task_manager.py  time_record_util.py  todolist.py
app/cosight/tool/: act_toolkit.py  audio_toolkit.py  code_toolkit.py  document_processing_toolkit.py  excel_toolkit.py  file_download_toolkit.py  file_toolkit.py  google_api_key.py  google_search_util.py  html_visualization_toolkit.py  image_analysis_toolkit.py  plan_toolkit.py  search_toolkit.py  (+7 more)
config/: __init__.py  config.py
cosight_server/deep_research/: __init__.py  entity.py  main.py  service.py
cosight_server/web/: 3rdpartylicenses.txt  iconfont.css  iconfont.eot  iconfont.html  iconfont.icp  iconfont.js  index.html  package.json  polyfills.js  polyfills.js.map  replay.html  runtime.js  runtime.js.map  scripts.js  styles.css  styles.css.map
cosight_ui/: angular.json  build.bat  package-lock.json  package.json  proxy-config.json  tsconfig.json
cosight_ui/src/: index.html  main.pc.ts  polyfills.ts  styles.scss  tsconfig.pc.json  tsconfig.spec.json
cosight_ui/tools/: build.js  npm-install.bat  npm-install.sh
scripts/: check_iframe.py
tools/: Cosight.spec  NAE-Manus.spec  README.md  build.py  build_web.py
work_space/: __init__.py
(+277 files in other folders)
