[project]
name = "co-sight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "astor==0.8.1",
    "baidusearch==1.0.3",
    "bottle==0.13.2",
    "browser-use==0.7.9",
    "docx2markdown==0.1.1",
    "fastapi==0.115.12",
    "ffmpeg-python==0.2.0",
    "googlesearch-python==1.3.0",
    "kaleido==0.2.1",
    "lagent==0.2.4",
    "markdown==3.8",
    "markdownify>=1.2.0",
    "mcp>=1.20.0",
    "minify-html>=0.18.1",
    "plotly==6.0.1",
    "python-socks>=2.7.2",
    "requests==2.32.3",
    "retry==0.9.2",
    "seaborn==0.13.2",
    "setuptools==77.0.3",
    "soundfile==0.13.1",
    "tavily-python==0.7.2",
    "websockets>=15.0.1",
    "wheel==0.45.1",
    "wikipedia==1.4.0",
    "xmltodict==0.14.2",
]
